# Zuno-backend

./: .dockerignore  Dockerfile  README.md  graph_outputs.txt  pyproject.toml  requirements.txt  setup.sql  ssh  ssh.pub
app/: main.py
app/Database/: auth.py  database.py  model.py  schema.py
app/api/v1/: chat.py  documentUpload.py  workspace.py
app/core/: config.py
app/rag/: decideGenerate.py  documentGrader.py  embeddings.py  generator.py  gradeGenerationhallucinationAnswer.py  gradeGenerationhallucinationAnswer2.py  llm.py  pipeline.py  questionRouter.py  reranker.py  retriever.py  webSearch.py
app/rag/tools/: newsEngine.py  toolCallTest.py  toolClassifier.py
app/services/: ingestion.py  test.py
app/vectorstore/: client.py
data/vectordb/: chroma.sqlite3
